# NoahsArk

./: .gitignore  LICENSE  README.md  TestingGit.txt
CubeWorld/: CMakeLists.txt  CubeWorld.sln
CubeWorld/CubeWorld/: CMakeLists.txt  CubeWorld.vcxproj  CubeWorld.vcxproj.filters  main.cpp  main.h
CubeWorld/CubeWorld/Artifacts/: Artifact.cpp  Artifact.h  ArtifactDefinition.cpp  ArtifactDefinition.h  ArtifactManager.cpp  ArtifactManager.h  CMakeLists.txt  IArtifactGraphics.cpp  IArtifactGraphics.h
CubeWorld/CubeWorld/Avatars/: Avatar.cpp  Avatar.h  AvatarDefinition.cpp  AvatarDefinition.h  AvatarInput.cpp  AvatarInput.h  AvatarManager.cpp  AvatarManager.h  AvatarPartDefinition.cpp  AvatarPartDefinition.h  CMakeLists.txt  Player.cpp  Player.h
CubeWorld/CubeWorld/Configuration/: AvailableConfigurations.cpp  AvailableConfigurations.h  CMakeLists.txt  Config.cpp  Config.h
CubeWorld/CubeWorld/Console/: CMakeLists.txt  CWConsole.cpp  CWConsole.h  ICWConsoleListener.cpp  ICWConsoleListener.h
CubeWorld/CubeWorld/Gameplay/: BaseGameplay.cpp  BaseGameplay.h  BasicEnemiesGameplay.cpp  BasicEnemiesGameplay.h  BasicGameplay.cpp  BasicGameplay.h  CMakeLists.txt  GameplayDefinition.cpp  GameplayDefinition.h  GameplayFactory.cpp  GameplayFactory.h  MultiplayerClientGameplay.cpp  MultiplayerClientGameplay.h  MultiplayerServerGameplay.cpp  MultiplayerServerGameplay.h  RoguelikeGameplay.cpp  RoguelikeGameplay.h
CubeWorld/CubeWorld/Items/: CMakeLists.txt  Inventory.cpp  Inventory.h  InventoryEntry.cpp  InventoryEntry.h  Item.cpp  Item.h  ItemDefinition.cpp  ItemDefinition.h  (+6 more)
(+122 files in other folders)
